<resources>
    <string name="app_name">Coleta De Presença</string>
    <string name="str_ColetaDePresenca">Coleta de Presença</string>
    <string name="str_RGM">RGM</string>
    <string name="str_Senha">Senha</string>
    <string name="str_InformeSenha">Informe a senha aqui.</string>
    <string name="str_informeRgmAqui">Informe o RGM aqui.</string>
    <string name="str_Conectar">Conectar</string>
    <string name="str_Sair">Sair</string>
    <string name="str_localizacao">Localização:</string>
    <string name="str_registrarPResenca">Registrar Presença</string>
    <string name="str_Cancelar">Cancelar</string>
    <string name="str_registrada">Presença registrada</string>
    <string name="str_localizacaoUnicid">Simular localização UNICID</string>
    <string name="strUsarLozalizacaoFake">usarLocalizacaoFake</string>

    <string-array name="disciplinasLista">
        <item>Linguagens Formais e Autômatos</item>
        <item>Trabalho de Graduação Interdisciplinar I </item>
        <item>Programação Para Dispositivos Móveis</item>
        <item>Inteligência artificial</item>
        <item>Qualidade de software</item>
        <item>Não há nenhuma aula no dia atual</item>
    </string-array>

</resources>