<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityPrincipalID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="7"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewColetaDePresenca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="fill_horizontal"
        android:text="@string/str_ColetaDePresenca"
        android:textColor="@color/color_vermelha"
        android:textSize="@dimen/dimen_30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelTextViewRGM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/str_RGM"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewColetaDePresenca" />

    <EditText
        android:id="@+id/editTextRGM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/str_informeRgmAqui"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTextViewRGM" />

    <TextView
        android:id="@+id/labelTextViewSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/str_Senha"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRGM" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/str_InformeSenha"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTextViewSenha" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_alturaBotao"
        android:layout_marginStart="70dp"
        android:backgroundTint="@color/color_botao"
        android:text="@string/str_Conectar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenha"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_alturaBotao"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/color_botao"
        android:text="@string/str_Sair"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenha"
        app:layout_constraintVertical_bias="0.100000024" />

</androidx.constraintlayout.widget.ConstraintLayout>