<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PresencaRegistradaActivity">

    <TextView
        android:id="@+id/textViewAulaFinal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Aula de hoje (Quarta Feira - 17/02/2020)"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerDisciplinasFinal"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="@dimen/dimen_50dp"
        android:entries="@array/disciplinasLista"
        android:background="#D8D3D3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAulaFinal"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/textViewLocalizacaoFinal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/str_localizacao"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDisciplinasFinal" />

    <TextView
        android:id="@+id/textViewDataRegFinal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/str_registrada"
        android:textAlignment="viewStart"
        android:textColor="@color/color_vermelha"
        android:textSize="@dimen/dimen_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocalizacaoFinal" />

    <Button
        android:id="@+id/buttonSairFinal"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="@dimen/dimen_70dp"
        android:backgroundTint="@color/color_botao"
        android:onClick="fecharAplicacao"
        android:text="@string/str_Sair"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataRegFinal"
        app:layout_constraintVertical_bias="0.100000024" />
</androidx.constraintlayout.widget.ConstraintLayout>